helm/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sample-app

spec:

  selector:
    app: sample-app

  ports:
  - port: 80
    targetPort: 5000

  type: ClusterIP
