helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sample-app

spec:

  ingressClassName: nginx

  rules:

  - host: sample.example.com

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:
            name: sample-app

            port:
              number: 80
